--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -56,7 +56,7 @@
               <td>{{ user.facePhotoSentAt | date:"dd/MM/yy"}}</td>
             </tr>
             <tr>
-              <th>Face Photo Validatet On</th>
+              <th>Face Photo Validated On</th>
               <td>{{ user.facePhotoValidatedAt | date:"dd/MM/yy"}}</td>
             </tr>
             <tr>
