--- a/src/app/carpooling/carpooling.component.html
+++ b/src/app/carpooling/carpooling.component.html
@@ -8,7 +8,7 @@
     </tr>
     <tr *ngFor="let carp of newCarpooling ">
       <td>{{carp.userName}}</td>
-      <td>{{carp.createdAt}}</td> 
+      <td>{{carp.createdAt | date:"dd/MM/yy" }}</td> 
     </tr>
   </table> 
 </div>
