--- a/src/app/main-container/main-container.component.css
+++ b/src/app/main-container/main-container.component.css
@@ -1,16 +1,16 @@
 .main-right-container {
-    width: auto;
+    width: 100%;
     float: left;
     padding: 30px;
 }
 
 .main-right-container #left {
-    width: 500px;
+    width: 50%;
     float: left;
 }
 
 .main-right-container #right {
-    width: auto;
+    width: 50%;
     float: left;
 }
 
