--- a/src/app/main-window/main-window.component.css
+++ b/src/app/main-window/main-window.component.css
@@ -1,5 +1,6 @@
 #main-container {
-    width:100%;
+    /*width:100%;
+    position: fixed;*/
     border-top: 2px solid black;
 }
 
@@ -7,4 +8,8 @@
     width: 250px;
     float: left;
     border-right: 2px solid black;
+}
+
+#content {
+    margin-left: 260px;
 }
