--- a/src/app/top-page/top-page.component.css
+++ b/src/app/top-page/top-page.component.css
@@ -5,16 +5,28 @@
 }
 
 img {
-    float: left;   
     height: 150px;
     padding-left: 50px;
 }
 
+#logo {
+    float: left;
+    width: 20%;
+    height: 100%;
+}
+
 #title {
     float: left;
-    margin-left: 50px;
     width: 50%;
     height: 100%;
+}
+
+#user-logout {
+    float: left;
+    width: 20%;
+    height: 100%;
+    text-align: right;   
+    padding-top: 0px;
 }
 
 h1 {
@@ -23,14 +35,6 @@ h1 {
 
 h1, h2 {
     text-align: center;
-}
-
-#user-logout {
-    float: right;
-    width: 20%;
-    text-align: right;
-    padding: 40px;
-    padding-top: 0px;
 }
 
 h3 {
