--- a/src/app/add-admin/add-admin.component.html
+++ b/src/app/add-admin/add-admin.component.html
@@ -1,10 +1,21 @@
 <div class="col-md-6">
-  <h2 class="text-center">Edit User</h2>
-  <form [formGroup]="editForm" (ngSubmit)="onSubmit(editForm)">
-    <!--<div class="form-group">
+  <h2 class="text-center">Add Admin</h2>
+  <form [formGroup]="addForm" (ngSubmit)="onSubmit(addForm)">
+    
+    <div class="form-group">
       <label for="userName">User Name<span>*</span></label>
       <input type="text" required readonly formControlName="userName" placeholder="User Name" name="userName" class="form-control" id="userName">
-    </div>-->
+    </div>
+
+    <div class="form-group">
+      <label for="userName">Password<span>*</span></label>
+      <input type="password" required readonly formControlName="password" placeholder="Min length 6, number, spicial char, ex: password0$" name="password" class="form-control" id="password">
+    </div>
+
+    <div class="form-group">
+      <label for="userName">Repeat password<span>*</span></label>
+      <input type="password" required readonly formControlName="passwordRepeat" placeholder="The same password as above" name="passwordRepeat" class="form-control" id="passwordRepeat">
+    </div>
 
     <div class="form-group">
       <label for="email">Email address<span>*</span></label>
@@ -31,12 +42,8 @@
       <input formControlName="postalCode" required placeholder="Postcode" name="postalCode" class="form-control" id="postalCode">
     </div>
 
-    <div class="form-group">
-      <label for="trustedCarpoolingDriverCode">Trusted carpooling driver code</label>
-      <input formControlName="trustedCarpoolingDriverCode" placeholder="Driver Code" name="trustedCarpoolingDriverCode" class="form-control" id="trustedCarpoolingDriverCode">
-    </div>
-
-    <button class="btn btn-success">Update</button>
-    <button (click)="backToAllUsers()">Back</button>
+    <button class="btn btn-success">Add admin</button>
+    
   </form>
 </div>
+  
