--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
 <router-outlet></router-outlet>
+<app-online-status
+  [onlineStatusMessage]="connectionStatusMessage"
+  [onlineStatus]="connectionStatus">
+</app-online-status>
