test token & form group add adm

--- a/src/app/add-admin/add-admin.component.html
+++ b/src/app/add-admin/add-admin.component.html
@@ -14,7 +14,7 @@
 
     <div class="form-group">
       <label for="userName">Repeat password<span>*</span></label>
-      <input type="password" required readonly formControlName="passwordRepeat" placeholder="The same password as above" name="passwordRepeat" class="form-control" id="passwordRepeat">
+      <input type="password" required readonly formControlName="passwordConfirm" placeholder="The same password as above" name="passwordConfirm" class="form-control" id="passwordConfirm">
     </div>
 
     <div class="form-group">
