--- a/src/app/add-admin/add-admin.component.html
+++ b/src/app/add-admin/add-admin.component.html
@@ -5,6 +5,7 @@
     <div class="form-group">
       <label for="userName">User Name<span>*</span></label>
       <input type="text" required formControlName="userName" placeholder="User Name" name="userName" class="form-control" id="userName">
+      <p *ngIf="wrongName">User name already exist. Please, choose another User name</p>
     </div>
 
     <div class="form-group">
