--- a/src/app/change-info-admin/change-info-admin.component.html
+++ b/src/app/change-info-admin/change-info-admin.component.html
@@ -5,7 +5,7 @@
        
       <input type="password" #old_Password required placeholder="Old password" name="old_Password" class="form-control" id="old_Password">
       
-      <input type="password" #new_Password required placeholder="New password (Min length 6, alphanumeric, special char: password0$)" name="new_Password" class="form-control" id="new_Password">
+      <input type="password" #new_Password required placeholder="New password (Minimun length = 6)" name="new_Password" class="form-control" id="new_Password">
       
       <input type="password" #confirm_new_password required placeholder="Confirm new password" name="confirm_new_password" class="form-control" id="confirm_new_password">
       
