--- a/src/app/add-admin/add-admin.component.css
+++ b/src/app/add-admin/add-admin.component.css
@@ -46,12 +46,16 @@ span, p {
 }
 
 P {
-    font-size: 75%;
+    font-size: 80%;
 }
-#gender {
-    width: 100px;
+
+
+
+#genderRadio {
+    width: 70px;
+    position: relative;
 }
+
 #paraGender {
     width: 250px;
-    float: left;
 }
