--- a/src/app/add-admin/add-admin.component.html
+++ b/src/app/add-admin/add-admin.component.html
@@ -6,6 +6,7 @@
       <label for="userName">User Name<span>*</span></label>
       <input type="text" required formControlName="userName" placeholder="User Name" name="userName" class="form-control" id="userName">
       <p *ngIf="wrongName">User name already exist. Please, choose another User name</p>
+      <p *ngIf="notValidName">Name not valid</p>
     </div>
 
     <div class="form-group">
@@ -17,7 +18,7 @@
       <label for="passwordConfirm">Confirm password<span>*</span></label>
       <input type="password" required formControlName="passwordConfirm" placeholder="The same password as above" name="passwordConfirm" class="form-control" id="passwordConfirm">
       <p>
-        <span *ngIf="wrongPassword">Minimum length = 6 </span>
+        <span *ngIf="wrongPassword">Minimum length = 6 &nbsp; </span>
         <span *ngIf="passwordNotMatching">Password not matching</span>
       </p>
     </div>
@@ -26,7 +27,7 @@
       <div id="genderRadio">
         <label for="gender">Gender<span>*</span></label>
         <label class="radioGender">Female</label>
-        <input class="radioGender" type="radio" formControlName="gender" name="gender" value="f" required checked>
+        <input class="radioGender" type="radio" formControlName="gender" name="gender" value="f" required checked="checked">
         <label class="radioGender">Male</label>
         <input class="radioGender" type="radio" formControlName="gender" name="gender" value="m" required>
       </div>      
