--- a/src/app/add-admin/add-admin.component.html
+++ b/src/app/add-admin/add-admin.component.html
@@ -50,7 +50,7 @@
 
     <div class="form-group">
       <label for="address">Address<span>*</span></label>
-      <input formControlName="address" required placeholder="Address" name="address" class="form-control" id="address">
+      <input formControlName="address" required placeholder="Street of 3 rivers, 7" name="address" class="form-control" id="address">
       <p *ngIf="notValidAddress">Address not valid</p>
     </div>
 
