--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="!modify_user">
   <div class="main-right-container">
     <h2>
-      <label>Search <input id="search" placeholder="Enter A VALIDE User Name" #box></label>
+      <label>Search <input id="search" placeholder="Enter A VALIDE User Name" #box [(ngModel)]="term"></label>
       <button (click)="getUserByUserName(box.value)">Go</button>
       <button (click)="getAllUsersBack()">Back</button>
     </h2>
@@ -10,7 +10,7 @@
     <div id="infos">
       <div  class="userInfo" *ngIf="!allUsers"> 
         <table *ngIf="apiResponse"> 
-          <ng-container *ngFor="let user of userByUserName"> <!-- | async-->
+          <ng-container *ngFor="let user of userByUserName">
             <tr>
               <th>User Name</th>
               <td>{{ user.userName }}</td>
@@ -102,14 +102,14 @@
     </div>
 
   
-    <ng-container *ngIf="allUsers">
+    <ng-container *ngIf="apiResponse && allUsers">
       <table>
         <tr>
           <th>User Name</th>
           <th>E-mail</th>
           <th>Created On</th>
         </tr>
-        <tr *ngFor="let user of users">
+        <tr *ngFor="let user of users | filter:term">
           <td><strong>{{ user.userName }}</strong></td>
           <td>{{ user.email }}</td>
           <td>{{ user.createdAt | date:"dd/MM/yy"}}</td>
