tooltip, paging, block no adm, aaah

--- a/src/app/users/users.component.css
+++ b/src/app/users/users.component.css
@@ -55,3 +55,30 @@ table#car {
 .client {
     color: rgb(221, 9, 9);
 }
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted  rgb(158, 158, 158);
+}
+  
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: rgb(158, 158, 158);
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    
+    /* Position the tooltip */
+    position: absolute;
+    z-index: 1;
+    bottom: 100%;
+    left: 50%;
+    margin-left: -60px;
+}
+  
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+}
