--- a/src/app/validation/validation.component.html
+++ b/src/app/validation/validation.component.html
@@ -54,4 +54,6 @@
       </div>
     </li>
   </ul>
+  <!--<button (click)="getCarsOtherPage(-1)">previous page</button>
+  <button (click)="getCarsOtherPage(+1)">Next page</button>-->
 </div>
