--- a/src/app/modify-user/modify-user.component.css
+++ b/src/app/modify-user/modify-user.component.css
@@ -34,6 +34,12 @@ input {
     width: 400px;
 }
 
-span {
+span, p {
     color: red;
+}
+
+P {
+    margin: 1px;
+    padding: 1px;
+    font-size: 80%;
 }
