--- a/src/app/validation/validation.component.html
+++ b/src/app/validation/validation.component.html
@@ -7,8 +7,8 @@
 <div id="profilePicture" class="tabcontent">
   <h1>Picture</h1>
   <ul class="picFrame" *ngFor= "let pic of pictures">
-    <li class="picValidation" *ngIf="pic.facePhotoFilename != null">    
-      <div *ngIf="(pic.validatedAt == null)">
+    <li class="picValidation" *ngIf="(pic.facePhotoValidatedAt == null && pic.facePhotoFilename != null)">
+      <div>
         <img src="{{pic.facePhotoFilename}}"/>
         <span>{{ pic.userName }}</span>
       </div>
@@ -23,9 +23,9 @@
 <div id="idCard" class="tabcontent">
   <h1>ID card</h1>
   <ul class="picFrame" *ngFor="let pic of pictures; let i=index">
-    <li class="picValidation" *ngIf="pic.identityPieceFilename != null"> <!---->
+    <li class="picValidation" *ngIf="(pic.identityPieceValidatedAt == null && pic.identityPieceFilename != null)">
       
-      <div *ngIf="(pic.validatedAt == null)">
+      <div>
           <img src="{{pic.identityPieceFilename}}"/>
           <span>{{ pic.userName }}</span>
       </div>
