--- a/src/app/change-info-admin/change-info-admin.component.css
+++ b/src/app/change-info-admin/change-info-admin.component.css
@@ -1,11 +1,9 @@
 h2 {
-    padding-left: 300px;
-    padding-right: 300px;
+    margin-left: 200px;
 }
 
 form {
-    padding-left: 300px;
-    padding-right: 300px;
+    margin-left: 50px;
 }
 
 input {
