--- a/src/app/top-page/top-page.component.css
+++ b/src/app/top-page/top-page.component.css
@@ -42,7 +42,7 @@ h3 {
 }
 
 #userName {
-    float: left;
+    
     width: 250px;
     position: absolute;
     background-color: white;
@@ -50,9 +50,50 @@ h3 {
 
 #menu {
     margin-top: 22px;
-    float: right;
+    
 }
 
 select {
     border: 0px solid white;
+}
+
+#openbtn {   
+    float: right;
+    font-size: 20px;
+    cursor: pointer;
+    border-radius: 6px;
+    color:rgb(10, 45, 150);
+    padding: 10px 15px;
+    border: none;
+}
+
+#mySidebar #closebtn {
+    margin-top: -50px;
+    font-size: 36px;
+    text-align: right;
+    cursor: pointer;
+    margin-right: 25px;
+}
+
+#mySidebar {
+    padding-top: 60px;
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 2;
+    right: 0px;
+    background-color: rgb(210, 210, 233);
+    overflow-x: hidden;
+    transition: 0.5s;
+}
+
+#mySidebar a {
+    cursor: pointer;
+    font-size: 25px;
+    padding: 0px 8px 8px 32px;
+    text-decoration: none;
+    color: white;
+    transition: 0.3s;
+    display: block;
 }
