--- a/src/app/carpooling/carpooling.component.html
+++ b/src/app/carpooling/carpooling.component.html
@@ -25,6 +25,6 @@
       <td>{{carp.description}}</td>
     </tr>
   </table>
-  <button (click)="getCarpoolingOtherPage(-1)">previous page</button>
-  <button (click)="getCarpoolingOtherPage(+1)">Next page</button>
+  <!--<button (click)="getCarpoolingOtherPage(-1)">previous page</button>
+  <button (click)="getCarpoolingOtherPage(+1)">Next page</button>-->
 </div>
