--- a/src/app/modify-user/modify-user.component.html
+++ b/src/app/modify-user/modify-user.component.html
@@ -42,6 +42,6 @@
     </div>
 
     <button class="btn btn-success">Update</button>
-    <button (click)="backToAllUsers()">Back</button>
+    <button (click)="backToAllUsers()">Go to the user</button>
   </form>
 </div>
